<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f74343"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/introinline"
            android:letterSpacing="0.1"
            android:text="@string/what_s_here"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="40sp">

        </TextView>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/email_address"
            android:paddingStart="15dp"
            android:backgroundTint="@color/rosa_claro"
            android:textColorHint="@color/rosa_claro" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:backgroundTint="@color/rosa_claro"
            android:textColorHint="@color/rosa_claro" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9c2222"
            android:fontFamily="@font/hind_regular"
            android:textSize="20sp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFF">

        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textColor="@color/rosa_claro">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/or"

            android:textAlignment="center"
            android:textColor="@color/rosa_claro"
            android:textStyle="italic">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textStyle=""
            android:textColor="@color/rosa_claro">

        </TextView>


    </LinearLayout>
</LinearLayout>